force-app/main/default/objects/Employee_Technology_Specialization__c/Employee_Technology_Specialization__c.object-meta.xml
<CustomObject>
    <label>Employee Technology Specialization</label>
    <nameField>
        <label>Employee Technology Specialization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Technology Specializations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>