force-app/main/default/objects/Employee_Technology_Specialization__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employee Technology Specializations</relationshipLabel>
    <relationshipName>Employee_Technology_Specializations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>