force-app/main/default/objects/Employee_Technology_Specialization__c/fields/Expertise_Type__c.field-meta.xml
<CustomField>
    <fullName>Expertise_Type__c</fullName>
    <label>Expertise Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>