force-app/main/default/objects/Employee_Technology_Specialization__c/fields/Level_of_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Expertise__c</fullName>
    <label>Level of Expertise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>