force-app/main/default/objects/Employee_Technology_Specialization__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <referenceTo>Technology__c</referenceTo>
    <relationshipLabel>Employee Technology Specializations</relationshipLabel>
    <relationshipName>Employee_Technology_Specializations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>